--- a/src/pages/blogs/components/blogPosts/index.scss
+++ b/src/pages/blogs/components/blogPosts/index.scss
@@ -1,79 +1,49 @@
-.post-container {
-  padding-left: 20px;
-  padding-right: 20px;
-
-  &__section {
-    max-width: 1170px;
-    margin: 0 auto;
-
-    &__cards {
+.post {
+  &.app-container {
+    .app-container__section {
       margin-top: 120px;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 45px;
-      grid-row-gap: 60px;
-      margin-bottom: 60px;
+    }
+  }
+  &__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 45px;
+    grid-row-gap: 60px;
+    margin-bottom: 60px;
+  }
+
+  &__card {
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.06);
+    display: flex;
+    margin-bottom: 250px;
+    height: 316px;
+
+    &__image {
+      max-width: 765px;
+      flex-shrink: 0;
+
+      img {
+        border-radius: 12px 0 0 12px;
+        width: 100%;
+      }
     }
 
-    &__card {
-      background: var(--white);
-      box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.06);
-      border-radius: 12px;
-      display: flex;
-      margin-bottom: 250px;
-      height: 316px;
+    &__text {
+      padding: 64px 64px 66px 45px;
 
-      &__image {
-        max-width: 765px;
-
-        img {
-          border-radius: 12px 0 0 12px;
-          width: 100%;
-        }
+      h3 {
+        line-height: 36px;
+        letter-spacing: 0.2px;
+        margin-bottom: 12px;
       }
 
-      &__text {
-        padding: 64px 64px 66px 45px;
-
-        h3 {
-          line-height: 36px;
-          letter-spacing: 0.2px;
-          margin-bottom: 12px;
-        }
-
-        p {
-          font-weight: 400;
-          font-size: 18px;
-          line-height: 32px;
-          margin-bottom: 37px;
-          color: var(--black3);
-          max-width: 296px;
-        }
-
-        &__author {
-          display: flex;
-          align-items: center;
-
-          img {
-            width: 40px;
-            margin-right: 12px;
-          }
-
-          h4 {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 19px;
-            color: var(--black);
-            margin-right: auto;
-          }
-
-          h5 {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 19px;
-            color: rgba(3, 6, 64, 0.9);
-          }
-        }
+      p {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 32px;
+        margin-bottom: 37px;
+        color: rgba(var(--black3-rgb), 0.9);
+        max-width: 296px;
       }
     }
   }
