--- a/src/pages/company/components/aboutUs/index.scss
+++ b/src/pages/company/components/aboutUs/index.scss
@@ -1,78 +1,75 @@
-.about-container {
-  padding-left: 20px;
-  padding-right: 20px;
-
-  &__section {
-    max-width: 1170px;
-    margin: 0 auto;
-
-    &__text {
+.about {
+  &.app-container {
+    .app-container__section {
       margin-top: 69px;
+    }
+  }
+  &__text {
+    h2 {
+      line-height: 65px;
+      margin-bottom: 12px;
+    }
 
-      h2 {
-        line-height: 65px;
-        margin-bottom: 12px;
-      }
+    p {
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 32px;
+      color: rgba(var(--black3-rgb), 0.9);
+      max-width: 833px;
+    }
+  }
 
-      p {
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 32px;
-        color: var(--black3);
-        max-width: 833px;
+  &__image {
+    margin-top: 58px;
+
+    &__team1 {
+      &__member {
+        &:nth-child(1) {
+          margin-top: 34px;
+        }
+        &:nth-child(2) {
+          margin-top: 135px;
+        }
       }
     }
 
-    &__image {
-      margin-top: 58px;
+    &__team1,
+    &__team2 {
+      display: flex;
+      gap: 30px;
+      justify-content: space-between;
 
-      &__team1 {
-        &__member {
-          &:nth-child(1) {
-            margin-top: 34px;
-          }
-          &:nth-child(2) {
-            margin-top: 135px;
-          }
+      &__member {
+        img {
+          width: 263px;
+        }
+
+        h4 {
+          font-weight: 700;
+          font-size: 21px;
+          line-height: 40px;
+          text-align: center;
+          letter-spacing: 0.2px;
+          color: var(--black);
+          margin-top: 16px;
+        }
+
+        p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 19px;
+          text-align: center;
+          color: rgba(var(--black3-rgb), 0.86);
         }
       }
+    }
 
-      &__team1,
-      &__team2 {
-        display: flex;
-        justify-content: space-between;
-
-        &__member {
-          img {
-            width: 263px;
-          }
-
-          h4 {
-            font-weight: 700;
-            font-size: 21px;
-            line-height: 40px;
-            text-align: center;
-            letter-spacing: 0.2px;
-            color: var(--black);
-            margin-top: 16px;
-          }
-
-          p {
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 19px;
-            text-align: center;
-            color: var(--black3);
-          }
-        }
-      }
-
-      &__team2 {
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 80px;
-        margin-bottom: 220px;
-      }
+    &__team2 {
+      display: flex;
+      gap: 30px;
+      justify-content: space-evenly;
+      margin-top: 80px;
+      margin-bottom: 220px;
     }
   }
 }
