--- a/src/pages/company/components/companyhero/index.scss
+++ b/src/pages/company/components/companyhero/index.scss
@@ -1,51 +1,47 @@
 .company-hero {
-  padding-left: 20px;
-  padding-right: 20px;
-
-  &__section {
-    padding: 132px 119px 0 119px;
-    max-width: 1408px;
-    margin: 4px auto 165px;
-    display: flex;
-    justify-content: space-between;
-    background: var(--white2);
-    align-items: center;
-
-    &__text {
-      h1 {
-        max-width: 464px;
-        font-weight: 700;
-        line-height: 68px;
-        margin-bottom: 20px;
-      }
-
-      &__dots {
-        display: flex;
-
-        &__dot {
-          border-radius: 50%;
-          height: 7px;
-          width: 7px;
-          background: var(--primary-color);
-          margin-right: 9px;
-        }
-      }
+  &.app-container {
+    .app-container__section {
+      padding: 132px 119px 0 119px;
+      max-width: 1408px;
+      margin: 4px auto 165px;
+      display: flex;
+      gap: 30px;
+      justify-content: space-between;
+      background: var(--white2);
+      align-items: center;
     }
+  }
+  &__text {
+    h1 {
+      max-width: 464px;
+      font-weight: 700;
+      line-height: 68px;
+      margin-bottom: 20px;
+      color: rgba(var(--black3-rgb), 0.9);
+    }
+  }
 
-    &__image {
-      padding: 195px 48px 48px;
-      background: linear-gradient(180deg, var(--black2b) 0%, var(--black4) 100%),
-        url(../../../../assets/images/Base-company.png);
-      background-position: center;
-      background-size: cover;
+  &__image {
+    padding: 195px 48px 48px;
+    background: linear-gradient(
+        180deg,
+        rgba(var(--black2), 0.5) 0%,
+        #141423 100%
+      ),
+      url(../../../../assets/images/Base-company.png);
+    background-position: center;
+    background-size: cover;
+    flex-shrink: 0;
 
-      p {
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 28px;
-        color: var(--white);
-        max-width: 557px;
-      }
+    p {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+      color: var(--white);
+      max-width: 557px;
+    }
+    img {
+      width: 100%;
     }
   }
 }
