--- a/src/pages/company/components/imageSlider/index.scss
+++ b/src/pages/company/components/imageSlider/index.scss
@@ -1,34 +1,33 @@
-.slider-container {
-  padding-left: 20px;
-  padding-right: 20px;
-  background: var(--purple);
-  overflow: hidden;
-
-  &__section {
-    padding-top: 156px;
-    padding-bottom: 154px;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 49px;
-
-    &__slide {
-      width: 1120px;
-      height: 461px;
+.slider{
+  &.app-container {
+    background: var(--purple);
+    overflow: hidden;
+  
+    .app-container__section {
+      padding-top: 156px;
+      padding-bottom: 154px;
+      display: flex;
+      justify-content: space-evenly;
+      gap: 49px;
+    }
+  }
+  &__slide {
+    width: 1120px;
+    height: 461px;
+    background: linear-gradient(
+      180deg,
+      #cec7d7 0%,
+      rgba(35, 35, 64, 0.9) 100%
+    );
+    flex-shrink: 0;
+  
+    &:nth-child(2) {
       background: linear-gradient(
         180deg,
-        #cec7d7 0%,
-        rgba(35, 35, 64, 0.9) 100%
+        rgba(35, 35, 64, 0) 0%,
+        rgba(35, 35, 64, 0.63) 100%
       );
-      flex-shrink: 0;
-
-      &:nth-child(2) {
-        background: linear-gradient(
-          180deg,
-          rgba(35, 35, 64, 0) 0%,
-          rgba(35, 35, 64, 0.63) 100%
-        );
-        background: url(../../../../assets/images/team.png);
-      }
+      background: url(../../../../assets/images/team.png);
     }
   }
 }
