--- a/src/pages/home/components/partners/index.scss
+++ b/src/pages/home/components/partners/index.scss
@@ -1,40 +1,48 @@
-.partners-container {
-  padding-left: 20px;
-  padding-right: 20px;
-  background: var(--white);
+@import '../../../../styles/mixins';
 
-  &__section {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 153px;
-    padding-bottom: 148px;
+.partners {
+  &.app-container {
+    background: var(--white);
 
-    &__image {
-      max-width: 589px;
+    .app-container__section {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-top: 153px;
+      padding-bottom: 148px;
+      gap: 30px;
 
-      img {
-        width: 100%;
+      @include mobile(900px) {
+        flex-direction: column;
       }
     }
+  }
 
-    &__text {
-      h1 {
-        font-weight: 600;
-        line-height: 53px;
-      }
+  &__image {
+    max-width: 589px;
+    flex-shrink: 0;
 
-      p {
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 38px;
-        color: var(--black3);
-        margin-top: 24px;
-        margin-bottom: 46px;
-        max-width: 487px;
-      }
+    img {
+      width: 100%;
+    }
+  }
+
+  &__text {
+    h1 {
+      font-weight: 600;
+      line-height: 53px;
+    }
+
+    p {
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 38px;
+      color: rgba(var(--black3-rgb), 0.9);
+      margin-top: 24px;
+      margin-bottom: 46px;
+      max-width: 487px;
     }
   }
 }
