--- a/src/pages/home/components/subscription/index.scss
+++ b/src/pages/home/components/subscription/index.scss
@@ -1,50 +1,50 @@
-.subscriptions-container {
-  padding-left: 20px;
-  padding-right: 20px;
-
-  &__section {
-    max-width: 1200px;
-    margin: 0 auto;
+.subscriptions {
+  &.app-container {
+    .app-container__section {
+      max-width: 1200px;
+    }
+  }
+  &__subscription {
     margin-top: 222px;
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    justify-content: space-between;
 
-    &__subscription {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    &__image {
+      max-width: 567px;
+      flex-shrink: 0;
 
-      &__image {
-        max-width: 567px;
-
-        img {
-          width: 100%;
-        }
-      }
-
-      &__text {
-        h1 {
-          max-width: 363px;
-          font-weight: 500;
-          line-height: 53px;
-          margin-bottom: 24px;
-        }
-
-        p {
-          font-weight: 400;
-          font-size: 24px;
-          line-height: 38px;
-          color: var(--black3);
-          max-width: 549px;
-        }
+      img {
+        width: 100%;
       }
     }
 
-    &__payment {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row-reverse;
-      align-items: center;
-      margin-top: 228px;
-      margin-bottom: 214px;
+    &__text {
+      h1 {
+        max-width: 363px;
+        font-weight: 500;
+        line-height: 53px;
+        margin-bottom: 24px;
+      }
+
+      p {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 38px;
+        color: rgba(var(--black3-rgb), 0.9);
+        max-width: 549px;
+      }
     }
+  }
+
+  &__payment {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: center;
+    margin-top: 228px;
+    margin-bottom: 214px;
   }
 }
