--- a/src/pages/partnership/components/partnershipHero/index.scss
+++ b/src/pages/partnership/components/partnershipHero/index.scss
@@ -1,12 +1,29 @@
-.partnership-contaiiner{
-    padding-left: 20px;
-    padding-right: 20px;
-
-    &__section{
-        max-width: 1170px;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+.partnership-hero {
+  &.app-container {
+    .app-container__section {
+      display: flex;
+      gap: 30px;
+      align-items: center;
+      justify-content: space-between;
     }
+  }
+  &__text {
+    h1 {
+      max-width: 464px;
+      font-weight: 700;
+      line-height: 68px;
+      margin-bottom: 20px;
+    }
+  }
+
+  &__image {
+    margin-top: 133px;
+    max-width: 653px;
+    margin-bottom: 98px;
+    flex-shrink: 0;
+
+    img {
+      width: 100%;
+    }
+  }
 }
