--- a/src/ui/atoms/buttons/index.scss
+++ b/src/ui/atoms/buttons/index.scss
@@ -7,6 +7,9 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
 
   &--primary {
     @extend .base-button;
